2/whoami-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami-app-deployment
spec:
  selector:
    matchLabels:
      app: whoami-app
  template:
    metadata:
      labels:
        app: whoami-app
    spec:
      containers:
      - name: whoami-app
        image: nginx:1.12 
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "64Mi"
          limits:
            cpu: "200m"
            memory: "128Mi"
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d/
      volumes:
      - name: config
        configMap:
          name: whoami-app-config
