2/whoami-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: whoami-app-service
spec:
  selector:
    app: whoami-app
  ports:
  - port: 80
    targetPort: 80
